--- a/my-app/src/styles/Header.css
+++ b/my-app/src/styles/Header.css
@@ -34,9 +34,9 @@
 .nav-menu ul {
     list-style: none;
     margin: 0;
-    padding: 0;
     display: flex;
     align-items: center;
+    padding: 0 20px 0 0;
 }
 
 .nav-menu li {
